ctm-sf-homeloan-app/main/default/objects/LoanApplicationDocument__c/LoanApplicationDocument__c.object-meta.xml
<CustomObject>
    <label>Loan Application Document</label>
    <nameField>
        <label>Loan Application Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Application Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>