ctm-sf-homeloan-app/main/default/objects/LoanApplicationDocument__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary documents</fullName>
            </value>
            <value>
                <fullName>Secondary documents</fullName>
            </value>
            <value>
                <fullName>Salary or wages</fullName>
            </value>
            <value>
                <fullName>Self-employed income</fullName>
            </value>
            <value>
                <fullName>Government income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>