ctm-sf-homeloan-app/main/default/objects/LoanApplicationDocument__c/fields/DocumentURL__c.field-meta.xml
<CustomField>
    <fullName>DocumentURL__c</fullName>
    <label>Document URL</label>
    <type>Url</type>
</CustomField>