ctm-sf-homeloan-app/main/default/objects/LoanApplicationDocument__c/fields/NotificationSentTimestamp__c.field-meta.xml
<CustomField>
    <fullName>NotificationSentTimestamp__c</fullName>
    <label>Notification Sent Timestamp</label>
    <type>DateTime</type>
</CustomField>