ctm-sf-homeloan-app/main/default/objects/LoanApplicationDocument__c/fields/referenceType__c.field-meta.xml
<CustomField>
    <fullName>referenceType__c</fullName>
    <label>Reference Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EntityTypes</valueSetName>
    </valueSet>
</CustomField>