ctm-sf-homeloan-app/main/default/objects/LoanApplicationDocument__c/fields/rejectedReason__c.field-meta.xml
<CustomField>
    <fullName>rejectedReason__c</fullName>
    <label>Rejected Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>