ctm-sf-homeloan-app/main/default/objects/LoanApplicationDocument__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DocumentStatuses</valueSetName>
    </valueSet>
</CustomField>